@@ -1,2 +1,12 @@
 # Remove-Duplicates
 A JavaFx application that deletes duplicate/redundant files stored on your systems file manager.
+
+To run the program from the command line, ensure you are in the working directory where RemoveDuplicates.java is stored. Then, in the command line enter:
+
+javac --module-path "Path to your javafx lib folder" --add-modules javafx.controls RemoveDuplicates.java
+
+Finally, run:
+
+java --module-path "Path to your javafx lib folder" --add-modules javafx.controls RemoveDuplicates
+
+WARNING: Running this program does not move files to your systems trash/recyling bin. These files will be permanantly deleted from your hard drive.
